Hearing management service refactored